--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client server application",
+  "name": "client-server-application",
   "version": "1.0.0",
   "description": "Simple react + mongodb application",
   "main": "index.js",
@@ -12,21 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
+    "babel-preset-stage-1": "^6.1.18",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
+    "cool-ascii-faces": "1.3.4",
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "jwt-simple": "^0.5.1",
+    "lodash": "^3.10.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "axios": "^0.16.1",
-    "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
-    "moment": "^2.18.1",
     "react": "^0.14.9",
     "react-big-calendar": "^0.14.4",
     "react-dom": "^0.14.3",
@@ -49,7 +50,6 @@
     "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
-    "eslint-config-rallycoding": "^3.2.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
