--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "body-parser": "^1.17.2",
     "cool-ascii-faces": "1.3.4",
     "cors": "^2.8.3",
-    "express": "^4.15.3",
+    "express": "^4.15.4",
     "jwt-simple": "^0.5.1",
     "lodash": "^3.10.1",
     "moment": "^2.18.1",
@@ -58,6 +58,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "engines": {
-    "node": "8.2.0"
+    "node": "8.2.0",
+    "npm": "5.3.0"
   }
 }
