--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.0.4",
     "redux-form": "^6.7.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
     "eslint-config-rallycoding": "^3.2.0",
@@ -55,7 +56,6 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "engines": {
